// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Book Card Button should match the default snapshot 1`] = `
<div>
  <div>
    <button
      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root  css-jbktht-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Add to library
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Testing Book Card Button should match the dhover snapshot 1`] = `
<div>
  <div>
    <button
      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root  css-47f4e9-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Add to library
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
